Set .llap .inner top to fix \llap vertical alignment

--- a/src/katex.less
+++ b/src/katex.less
@@ -274,6 +274,7 @@
 
         > .inner {
             position: absolute;
+            top: 0;
         }
 
         > .fix {
